# cluster-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  features.md  install.sh  justfile  setup-hooks.sh
.agents/skills/release-cluster-cli/: SKILL.md
.agents/skills/release-cluster-cli/agents/: openai.yaml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  dependabot-release.yml  release.yml
homebrew/: cluster-cli.rb
src/: app.rs  config.rs  config_tests.rs  main.rs  updater.rs
src/data/: collector.rs  fetcher.rs  health.rs  incidents.rs  mod.rs  models.rs
src/data/tests/: collector_tests.rs  health_tests.rs  mod.rs  models_tests.rs
src/events/: handler.rs  mod.rs
src/ui/: format.rs  mod.rs  theme.rs
src/ui/components/: event_detail_overlay.rs  events_panel.rs  health_score.rs  loading_spinner.rs  log_viewer.rs  mod.rs  node_panel.rs  pod_table.rs  status_bar.rs
src/ui/views/: dashboard.rs  mod.rs  node_detail.rs  pod_detail.rs
