[package]
name = "cluster-cli"
version = "0.1.1"
edition = "2021"
authors = ["Sarath C"]
description = "A fast, interactive terminal UI for monitoring Kubernetes cluster health"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sharat/cluster-cli"
homepage = "https://github.com/sharat/cluster-cli"
keywords = ["kubernetes", "k8s", "monitoring", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "cluster"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"

clap = { version = "4", features = ["derive"] }
dirs = "5"
toml = "1.0"

reqwest = { version = "0.12", features = ["json"] }
semver = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
